finally fix that wrap issue on reddit subheadings

--- a/.mozilla/firefox/ben/chrome/userContent.css
+++ b/.mozilla/firefox/ben/chrome/userContent.css
@@ -174,7 +174,7 @@
   .entry.unvoted,
   .entry.likes,
   .entry.dislikes {
-    width: auto !important;
+    flex-grow: 1;
   }
 
   /* header area */
